Fix the image not centered on large screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,39 +1,35 @@
 /* Google fonts import */
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@200;300;400;500;600;700&display=swap');
 
-/* Asterisk wildcard selector to override styles added by the browser */ 
-
+/* Asterisk wildcard selector to override default styles added by the browser */
 * {
-    padding : 0;
-    margin : 0;
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
 }
 
 /* General styles */
-
 body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    /* General project styles */
+    /* Generic project styles */
     color: #3a3a3a;
     font-family: 'Lato', sans-serif;
 }
 
-h1, h2, h3{
-    font-family: 'Oswald', sans serif;
+h1,
+h2,
+h3 {
+    font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
     letter-spacing: 2px;
     color: #252525;
 }
 
-.hidden-heading{
-    display: none;
-}
-
 /* Header */
 header {
-    background-color : #ffffff;
+    background-color: #ffffff;
     padding: 0 1rem;
     position: fixed;
     z-index: 99;
@@ -42,20 +38,11 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: baseline;
-
 }
 
-/* nav toggle */
-#nav-toggle:checked~nav {
-    display: block;
-}
-
-#nav-toggle{
-    display: none;
-}
-
-.nav-toggle-label{
-    font-size: 2rem;
+header a {
+    text-decoration: none;
+    color: inherit;
 }
 
 #menu {
@@ -64,56 +51,58 @@ header {
     list-style-type: none;
 }
 
-#menu > li {
+#menu>li {
     margin-bottom: 1em;
-
 }
 
 .active {
-    border-bottom: 1px solid  #3a3a3a;
-
+    border-bottom: 1px solid #3a3a3a;
 }
-
-header a {
-    text-decoration: none;
-    color: inherit;
-}
-
 
 /* Navbar styles with dropdown toggle */
-
-nav{
+nav {
     position: absolute;
     background-color: #ffffff;
     width: 100%;
-    box-shadow: 0 2px 2px #3a3a3a;
+    left: 0;
     padding: 0 1rem;
-    left : 0;
+    box-shadow: 0 2px 2px #3a3a3a;
     display: none;
     top: 100%;
 }
 
-/* Main Content  */
-main {
+/* Nav toggle */
+#nav-toggle:checked~nav {
+    display: block;
+}
 
-    /* make main element take up any surplus space to push footer down */
+#nav-toggle {
+    display: none;
+}
+
+.nav-toggle-label {
+    font-size: 2rem;
+}
+
+/* Main content */
+main {
+    /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
     margin-top: 47px;
 }
 
 /* Hero section */
-
 #hero {
     height: 600px;
     width: 100%;
-    background: url(../images/hero-image.webp) no-repeat center center/cover;
+    background: url("../images/hero-image.webp") no-repeat center center/cover;
     position: relative;
 }
 
 #cover-text {
     /* Final rgba value sets the opacity so it is semi-transparent */
     background-color: rgba(241, 109, 107, .7);
-    font-size: 130% ;
+    font-size: 130%;
     position: absolute;
     bottom: 30px;
     width: 80%;
@@ -122,11 +111,13 @@ main {
     padding-left: 10px;
 }
 
-#cover-text > h2 , #cover-text > h3 {
+#cover-text>h2,
+#cover-text>h3 {
     color: #ffffff;
 }
 
-#reasons{
+/* Reasons section */
+#reasons {
     width: 90%;
     margin: 20px auto;
 }
@@ -135,45 +126,46 @@ main {
     margin-bottom: 20px;
     text-align: center;
     font-size: 280%;
-    margin-top: 10px;
-    
-}
-#benefits hr{
-    border-top: 1px solid #3a3a3a;
-    margin: 5px 0;
 }
 
-#benefits p{
-    padding:0 20px;
-}
-
-#benefits-physical > div, #benefits-mental > div{
+#benefits-physical>div,
+#benefits-mental>div {
     line-height: 20px;
     margin-bottom: 20px;
 }
 
+#benefits p {
+    padding: 0 20px;
+}
 
-#circle-cover-bg{ 
+#benefits hr {
+    border-top: 1px solid #3a3a3a;
+    margin: 5px 0;
+}
+
+#circle-cover-bg {
+    background: url('../images/reasons-image.webp') no-repeat top center / cover;
     height: 90vw;
     width: 90vw;
-    background: url(../images/reasons-image.webp)  no-repeat top center/cover;
     margin-bottom: 20px;
-    /* Make the square image into a circle  */
+    /* Makes the square image into a circle */
     border-radius: 50%;
     max-width: 300px;
     max-height: 300px;
 }
-#benefits-image{
-   display: flex;
-   align-items: center;
-   justify-content: center;
+
+#benefits-image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-#times{ 
-    background: url(../images/dublin-city.webp) no-repeat center/cover;
-    /* Handles responsitivity without the need for a media query */
+/* Meetup Times section */
+#times {
+    background: url('../images/dublin-city.webp') no-repeat center/cover;
+    /* Handles responsivity without the need for a media query */
     display: flex;
-    flex-wrap: wrap;   
+    flex-wrap: wrap;
 }
 
 #times div {
@@ -189,9 +181,8 @@ main {
     border: 2px solid white;
 }
 
-
-#times h3{
-    /* Overridee the heading colour set in general styles */
+#times h3 {
+    /* Override the heading colour set in general styles */
     color: #fafafa;
 }
 
@@ -270,7 +261,6 @@ main {
         align-self: flex-end;
     }
 }
-
 
 /* Large devices (laptops and desktops, 992px and up) */
 @media screen and (min-width: 992px) {
